Fixed the z-index error of colorpicker

--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -6,6 +6,7 @@
     height: 100vh;
     background-color: white;
     position: sticky;
+    z-index: 1;
     top: 0;
     align-self: start;
     border-top: none;
